fixed alignment of tip

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
 .starter {
     margin: 0;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
